# spline

./: CMakeLists.txt  README.md  display.ipynb
include/: BSplines.hpp  Spline.hpp  Vec3.hpp  splines.hpp
src/: bspline.cpp  main.cpp  spline.cpp
